terraform/eks-cluster.tf

resource "aws_iam_role" "pomelo-cluster" {
  name = "terraform-eks-pomelo-cluster"

  assume_role_policy = <<POLICY
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Principal": {
        "Service": "eks.amazonaws.com"
      },
      "Action": "sts:AssumeRole"
    }
  ]
}
POLICY
}

resource "aws_iam_role_policy_attachment" "pomelo-cluster-AmazonEKSClusterPolicy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy"
  role       = aws_iam_role.pomelo-cluster.name
}

resource "aws_iam_role_policy_attachment" "pomelo-cluster-AmazonEKSVPCResourceController" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSVPCResourceController"
  role       = aws_iam_role.pomelo-cluster.name
}

resource "aws_security_group" "pomelo-cluster" {
  name        = "terraform-eks-pomelo-cluster"
  description = "Cluster communication with worker nodes"
  vpc_id      = aws_vpc.pomelo.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "terraform-eks-pomelo"
  }
}

resource "aws_security_group_rule" "pomelo-cluster-ingress-workstation-https" {
  cidr_blocks       = [local.workstation-external-cidr]
  description       = "Allow workstation to communicate with the cluster API Server"
  from_port         = 443
  protocol          = "tcp"
  security_group_id = aws_security_group.pomelo-cluster.id
  to_port           = 443
  type              = "ingress"
}

resource "aws_eks_cluster" "pomelo" {
  name     = var.polls-app
  role_arn = aws_iam_role.pomelo-cluster.arn

  vpc_config {
    security_group_ids = [aws_security_group.pomelo-cluster.id]
    subnet_ids         = aws_subnet.pomelo[*].id
  }

  depends_on = [
    aws_iam_role_policy_attachment.pomelo-cluster-AmazonEKSClusterPolicy,
    aws_iam_role_policy_attachment.pomelo-cluster-AmazonEKSVPCResourceController,
  ]
}
